# 3p-colladadom

./: CMakeLists.txt
src/1.4/: CMakeLists.txt
src/1.5/: CMakeLists.txt
src/dae/: daeMetaElement.cpp  daeUtils.cpp
